For better readability, we now use a maximal document width. Fixes #41

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -347,7 +347,7 @@ a.button:active {
 /* body > #container
 -------------------------------------------------------------------------------*/
 
-#container { margin: 0; padding: 0; }
+#container { margin: 0; padding: 0; max-width: 1200px;}
 
 /* body > #container > #header
 -------------------------------------------------------------------------------*/
